# usa-wa

./: .gitignore  .pre-commit-config.yaml  .socraticodecontextartifacts.json  AGENTS.md  README.md  alembic.ini  conftest.py  pyproject.toml
.claude/: settings.json
.claude/hooks/: socraticode-reminder.sh
.claude/skills/: finishing-a-development-branch  (+7 more)
alembic/: env.py
deploy/: usa-wa-integrity-sweep.service  usa-wa-integrity-sweep.timer  usa-wa-migrate.service  usa-wa-notify-failure@.service  usa-wa-pdc-refresh.service  usa-wa-pdc-refresh.timer  usa-wa-reconcile-committee-active.service  usa-wa-reconcile-committee-active.timer  usa-wa-reconcile-committee-meeting-names.service  usa-wa-reconcile-committee-meeting-names.timer  usa-wa-reconcile-committee-names.service  usa-wa-reconcile-committee-names.timer  usa-wa-sos-refresh.service  usa-wa-sos-refresh.timer  usa-wa-succession-invariants.service  usa-wa-succession-invariants.timer  usa-wa-sync-powermap.service  usa-wa-wsl-refresh.service  usa-wa-wsl-refresh.timer  usa-wa.service
docs/: ARCHITECTURE.md  COMMANDS.md  LWW-NOOP-GATE.md  SKILLS.md
scripts/: assert-main-checkout.sh  grants.sql  migrate.sh  notify-failure.sh  test_verify_units.py  verify-units.sh
skills/: executing-plans  finishing-a-development-branch  init-project-fastapi  receiving-code-review  requesting-code-review  reviewing-code  reviewing-code-php  reviewing-code-python-click  shipping-work  shipping-work-php  shipping-work-python-click  shipping-work-python-fastapi  using-git-worktrees  using-superpowers
tests/: conftest.py  test_health.py
(+99 files in other folders)
