[project]
name = "usa-wa"
version = "0.1.0"
description = "Washington State law, regulation, and policy tracking service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.0,<2",
    "asyncpg>=0.30.0,<1",
    "fastapi>=0.115.0,<1",
    "pydantic-settings>=2.5.0,<3",
    "python-json-logger>=4.0.0,<5",
    "sqlalchemy[asyncio]>=2.0,<3",
    "uvicorn>=0.34.0,<1",
]

[dependency-groups]
dev = [
    "anyio>=4.0,<5",
    "pre-commit>=4.0,<5",
    "pytest>=8.0,<9",
    "pytest-asyncio>=1.0,<2",
    "pytest-cov>=6.0,<7",
    "ruff>=0.9,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -m 'not integration' --cov=src --cov-report=term-missing"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "integration: marks tests that hit live external services or a real database; excluded by default (run with -m integration)",
]
filterwarnings = [
    "error::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["skills-vendor/", "alembic/versions/"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
